# levy

./: .env.example  .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
data/: DATASHEET.md  README.md  ground_truth.csv  ground_truth.json
docs/: LITERATURE_REVIEW.md  PLANNING_HIERARCHY.md  Project_Proposal.md  RESEARCH_OVERVIEW.md  Specification_and_Design_Report.md
docs/epics/: EPIC-001-client-proxy-layer.md
examples/: anthropic_smoke_check.py  ollama_demo.py  simple_replay.py
levy/: __init__.py  config.py  embedding_manager.py  embeddings.py  engine.py  llm_client.py  metrics.py  models.py
levy/api/: app.py  pool.py  schemas.py
levy/cache/: base.py  exact_cache.py  redis_store.py  semantic_cache.py  store.py  vector_index.py
levy/dataset/: __init__.py  annotation.py  io.py  kappa.py  sampling.py  schema.py
levy/experiment/: __init__.py  config.py  metrics.py  replay.py  runner.py
memory/: MEMORY.md  project_lev1_done.md
openspec/: config.yaml
openspec/changes/add-anthropic-connector/: design.md  proposal.md  tasks.md
openspec/changes/add-anthropic-connector/specs/anthropic-connector/: spec.md
openspec/changes/add-embedding-manager/: tasks.md
openspec/changes/add-experiment-harness/: design.md  proposal.md  tasks.md
openspec/changes/add-faiss-vector-store/: tasks.md
openspec/changes/add-fastapi-router/: design.md  proposal.md  tasks.md
openspec/changes/add-ground-truth-dataset/: design.md  proposal.md  tasks.md
openspec/changes/add-test-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-add-embedding-manager/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-add-faiss-vector-store/: design.md  proposal.md
openspec/specs/embedding-management/: spec.md
openspec/specs/vector-store/: spec.md
scripts/: annotate_dataset.py  compute_kappa.py  export_dataset.py  run_experiments.py  sample_dataset.py
tests/: test_anthropic_client.py  test_api_router.py  test_cache.py  test_dataset.py  test_embedding_manager.py  test_engine.py  test_experiment_config.py  test_experiment_metrics.py  test_experiment_replay.py  test_experiment_runner.py  test_levy.py  test_metrics.py  test_providers.py  test_vector_index.py
(+4 files in other folders)
