[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "levy"
version = "0.1.0"
description = "Semantic caching engine for LLM APIs – experimental core for cost optimisation"
authors = [{name = "AlejoJamC", email = "alejojamc7@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "sentence-transformers>=3.0",
    "transformers>=4.48",
    "faiss-cpu>=1.7",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["levy"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
